# aces

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .venv  CLAUDE.md  Cargo.toml  Dockerfile  README.md  pyproject.toml
aces/: __init__.py  batched_vec_env.py  config.py  constrained_ppo.py  curriculum.py  env.py  export.py  fsm.py  god_oracle.py  logging_config.py  neural_symbolic.py  ns_env.py  opponent_pool.py  perception.py  policy.py  trainer.py  trajectory.py  viz.py
aces/env/: __init__.py  dogfight.py  ns_env.py  obs_layout.py  trajectory.py
aces/perception/: __init__.py  fsm.py
aces/policy/: __init__.py  constrained_ppo.py  extractors.py
aces/training/: __init__.py  callbacks.py  curriculum_trainer.py  evaluate.py  gpu_vec_env.py  logging.py  opponent_pool.py  self_play.py
configs/: arena.toml  curriculum.toml  drone.toml  rules.toml
crates/batch-sim/: Cargo.toml
crates/batch-sim/examples/: bench_batch.rs  bench_gpu_vs_cpu.rs  gpu_probe.rs
crates/batch-sim/src/: battle.rs  f32_cost.rs  f32_dynamics.rs  f32_sdf.rs  lib.rs  observation.rs  orchestrator.rs  reward.rs
crates/batch-sim/src/gpu/: adapter.rs  mod.rs  orchestrator.rs  pipeline.rs  shader.rs
crates/batch-sim/src/gpu/shaders/: mppi_helpers.wgsl  mppi_rollout.wgsl  mppi_softmax.wgsl
crates/batch-sim/tests/: gpu_pipeline.rs
crates/estimator/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: arena.rs  camera.rs  config.rs  drone.rs  fsm.rs  hud.rs  input.rs  main.rs  marker.rs  perception.rs  policy.rs  simulation.rs  weights.rs
crates/mppi/: Cargo.toml
crates/mppi/src/: cost.rs  lib.rs  optimizer.rs  rollout.rs
crates/py-bridge/: Cargo.toml
crates/py-bridge/src/: lib.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: actuator.rs  camera.rs  collision.rs  detection.rs  dynamics.rs  environment.rs  imu_bias.rs  lib.rs  lockon.rs  noise.rs  recorder.rs  safety.rs  state.rs  wind.rs
docker/: Dockerfile.aces  Dockerfile.dev-base  Dockerfile.train  README.md  apply-dotfiles.sh  runpod-start.sh
docs/: 2026-04-24-session-archive.md  architecture.md  design.md  gpu-mppi.md  overnight-report.md  parallel_architecture.md  runpod.md
docs/archive/: 2026-04-20-aces-mvp.md  plan.md
logs/train_20260421_183246/: episodes.csv
logs/train_20260421_183248/: episodes.csv
logs/train_20260421_183252/: episodes.csv
logs/train_20260421_183254/: episodes.csv
logs/train_20260421_183256/: episodes.csv
logs/train_20260421_183258/: episodes.csv
logs/train_20260421_183301/: episodes.csv
logs/train_20260421_183303/: episodes.csv
logs/train_20260421_184022/: episodes.csv
logs/train_20260421_202233/: episodes.csv
logs/train_20260421_202236/: episodes.csv
logs/train_20260421_202243/: episodes.csv
logs/train_20260421_202246/: episodes.csv
logs/train_20260421_202249/: episodes.csv
logs/train_20260421_202251/: episodes.csv
logs/train_20260421_202254/: episodes.csv
logs/train_20260421_202258/: episodes.csv
logs/train_20260421_203332/: episodes.csv
logs/train_20260421_203343/: episodes.csv
logs/train_20260421_203358/: episodes.csv
logs/train_20260421_203405/: episodes.csv
logs/train_20260421_203410/: episodes.csv
logs/train_20260421_203416/: episodes.csv
logs/train_20260421_203423/: episodes.csv
logs/train_20260421_203430/: episodes.csv
logs/train_20260421_203822/: episodes.csv
logs/train_20260421_203827/: episodes.csv
logs/train_20260421_203838/: episodes.csv
logs/train_20260421_203844/: episodes.csv
logs/train_20260421_203849/: episodes.csv
logs/train_20260421_203854/: episodes.csv
logs/train_20260421_203901/: episodes.csv
logs/train_20260421_203906/: episodes.csv
logs/train_20260421_211229/: episodes.csv
logs/train_20260421_211231/: episodes.csv
logs/train_20260421_211234/: episodes.csv
logs/train_20260421_211236/: episodes.csv
logs/train_20260421_211237/: episodes.csv
logs/train_20260421_211238/: episodes.csv
plans/: curriculum-architecture.md  parallel-simulation.md
scripts/: bench_training_throughput.py  check_gpu_setup.sh  collect_oracle_data.py  experiment_chain.py  install-hooks.sh  pre-commit.sh  run.py  smoke_gpu_ppo.py  test-python-core.sh  train_perception.py  train_server.py
tests/: conftest.py  test_action_normalization_consistency.py  test_callback_wrapper_chain.py  test_config.py  test_curriculum.py  test_curriculum_gpu_opt.py  test_denormalize_action.py  test_dogfight_opponent_shim.py  test_dynamics.py  test_ekf_statistical.py  test_env.py  test_fsm.py  test_god_oracle.py  test_gpu_cost_weights_plumbing.py  test_gpu_info_dict_aliases.py  test_gpu_lockon_plumbing.py  test_gpu_ppo_smoke.py  test_gpu_reward_plumbing.py  test_gpu_vec_env.py  test_gpu_wind_plumbing.py  test_neurosymbolic_integration.py  test_obs_layout.py  test_observation_consistency.py  test_opponent_pool.py  test_perception.py  test_reward_consistency.py  test_trainer.py  test_training_bench.py  test_trajectory.py  test_viz.py
(+80 files in other folders)
