[workspace]
members = [
    "crates/sim-core",
    "crates/mppi",
    "crates/estimator",
    "crates/py-bridge",
    "crates/game",
    "crates/batch-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1.10"
pyo3 = { version = "0.25", features = ["extension-module"] }
approx = "0.5"
bevy = "0.15"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Bevy runs extremely slow in pure debug mode.
# Optimize dependencies while keeping local crates in debug for fast compiles.
[profile.dev.package."*"]
opt-level = 2
