[package]
name = "aces-batch-sim"
version.workspace = true
edition.workspace = true

[dependencies]
aces-sim-core = { path = "../sim-core" }
aces-mppi = { path = "../mppi" }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }

[dependencies.wgpu]
version = "23"
optional = true

[dependencies.bytemuck]
version = "1"
features = ["derive"]
optional = true

[dev-dependencies]
approx = { workspace = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck"]
