[package]
name = "aces-game"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aces-game"
path = "src/main.rs"

[dependencies]
aces-sim-core = { path = "../sim-core" }
aces-mppi = { path = "../mppi" }
bevy = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
