[package]
name = "aces-mppi"
version.workspace = true
edition.workspace = true

[dependencies]
aces-sim-core = { path = "../sim-core" }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
